# grid-benchmark

./: Benchmark_Grid.cpp  Benchmark_IO.cpp  Makefile.am  Readme.md  aio-deploy.sh  configure.ac
Benchmark-Grid/: ActionInfo.hpp  Utils.cpp  Utils.hpp  main.cpp
Benchmark-Grid/benchmarks/: Benchmarks.hpp  Comms.cpp  DeoFlops.cpp  DeoFlops.hpp  Latency.cpp  Memory.cpp  P2P.cpp  SU4.cpp
Benchmark-Grid/checks/: Checks.hpp  Wilson.cpp
Instantiation/: KernelImplementation.hpp
Instantiation/Sp4Fund/: CayleyFermion5D.cc  Implementation.hpp  Wilson.cpp  WilsonFermion5DInstantiationSpWilsonImplD.cc  WilsonKernelsInstantiationSpWilsonImplD.cc
Instantiation/Sp4TwoIndexAntiSymmetric/: CayleyFermion5DInstantiationSpWilsonTwoIndexAntiSymmetricImplD.cc  CayleyFermion5DInstantiationSpWilsonTwoIndexAntiSymmetricImplF.cc  Implementation.hpp  Wilson.cpp  WilsonFermion5DInstantiationSpWilsonTwoIndexAntiSymmetricImplD.cc  WilsonFermion5DInstantiationSpWilsonTwoIndexAntiSymmetricImplF.cc  WilsonKernelsInstantiationSpWilsonTwoIndexAntiSymmetricImplD.cc  WilsonKernelsInstantiationSpWilsonTwoIndexAntiSymmetricImplF.cc
instantiation/: instantiations.hpp
instantiation/SU4/: SU4.hpp
instantiation/Sp4Fund/: Cayley5DD.cpp  Cayley5DF.cpp  Sp4Fund.hpp  Wilson5DD.cpp  Wilson5DF.cpp  WilsonKernelsD.cpp  WilsonKernelsF.cpp
instantiation/Sp4TwoIndexAntiSymmetric/: Cayley5DF.cpp  Sp4TwoIndexAntiSymmetric.hpp  Wilson5DD.cpp  Wilson5DF.cpp  WilsonKernelsD.cpp  WilsonKernelsF.cpp
results/251124/daint/benchmark-grid-1.2128733/: end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/daint/benchmark-grid-16.2128747/: end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/daint/benchmark-grid-2.2128735/: end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/daint/benchmark-grid-32.2128750/: end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/daint/benchmark-grid-4.2128738/: elf  end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/daint/benchmark-grid-64.2128752/: end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/daint/benchmark-grid-8.2128756/: app-hash  end-date  ldd  log  nodes  result.json  script  start-date  telemetry.db
results/251124/ga007/benchmark-grid-1.9106360/: result.json  standard_output_file.9106360.4294967294.out
results/251124/ga008/benchmark-grid-1/: result.json
results/251124/lumi/benchmark-grid-1.14886761/: end-date  ldd  log  nodes  result.json  script  start-date
results/251124/lumi/benchmark-grid-16.14887899/: end-date  ldd  log  nodes  result.json  script  start-date
results/251124/lumi/benchmark-grid-2.14886764/: end-date  ldd  log  nodes  (+3 more)
systems/daint/files/: run.gpu.1n.sh
systems/linux-x64/files/: run-cpu.sh
systems/tursa/files/: run.cpu.1n.sh  run.gpu.16n.sh  run.gpu.1n.sh  run.gpu.32n.sh
(+111 files in other folders)
