ACLOCAL_AMFLAGS = -I .buildutils/m4
 
bin_PROGRAMS =                \
  Benchmark_Grid              \
  Benchmark_IO

Benchmark_Grid_SOURCES              = Benchmark_Grid.cpp \
                                      instantiation/Sp4Fund/WilsonKernelsF.cpp\
                                      instantiation/Sp4Fund/WilsonKernelsD.cpp\
                                      instantiation/Sp4Fund/Wilson5DF.cpp\
                                      instantiation/Sp4Fund/Wilson5DD.cpp\
                                      instantiation/Sp4Fund/Cayley5DF.cpp\
                                      instantiation/Sp4Fund/Cayley5DD.cpp\
                                      instantiation/Sp4TwoIndexAntiSymmetric/WilsonKernelsF.cpp\
                                      instantiation/Sp4TwoIndexAntiSymmetric/WilsonKernelsD.cpp\
                                      instantiation/Sp4TwoIndexAntiSymmetric/Wilson5DF.cpp\
                                      instantiation/Sp4TwoIndexAntiSymmetric/Wilson5DD.cpp\
                                      instantiation/Sp4TwoIndexAntiSymmetric/Cayley5DF.cpp\
                                      instantiation/Sp4TwoIndexAntiSymmetric/Cayley5DD.cpp\
                                      instantiation/SU4/WilsonKernelsF.cpp\
                                      instantiation/SU4/WilsonKernelsD.cpp\
                                      instantiation/SU4/Wilson5DF.cpp\
                                      instantiation/SU4/Wilson5DD.cpp\
                                      instantiation/SU4/Cayley5DF.cpp\
                                      instantiation/SU4/Cayley5DD.cpp

Benchmark_IO_SOURCES                = Benchmark_IO.cpp
